[package]
name = "hyper-proxy"
version = "0.8.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
description = "A proxy connector for Hyper-based applications"

documentation = "https://docs.rs/hyper-proxy"
repository = "https://github.com/tafia/hyper-proxy"

readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["io-std"] }
hyper = { version = "0.13" }

tower-service = "0.3"
http = "0.2"
futures = "0.3"
bytes = "0.5"
hyper-tls = { optional = true, version = "0.4.3" }
tokio-tls = { version = "0.3", optional=true }
native-tls = { version = "0.2", optional=true }
tokio-rustls = { version = "0.14", optional=true }
hyper-rustls = { version="0.22.1", default-features = false, optional=true }

webpki = { version = "0.21", optional = true }
rustls-native-certs = { version = "0.4.0", optional = true }
webpki-roots = { version = "0.20.0", optional = true }
typed-headers = "0.2"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }

[features]
tls = ["tokio-tls", "hyper-tls", "native-tls"]
# note that `rustls-base` is not a valid feature on its own - it will configure rustls without root
# certificates!
rustls-base = ["tokio-rustls", "hyper-rustls", "webpki"]
rustls = ["rustls-base", "rustls-native-certs", "hyper-rustls/native-tokio"]
rustls-webpki = ["rustls-base", "webpki-roots", "hyper-rustls/webpki-tokio"]
default = ["tls"]
